@@ -25,12 +25,9 @@ bugtracker = http://github.com/semifor/Net-Twitter/issues
 [ConfirmRelease]
 [UploadToCPAN]
 
-[Run::BeforeBuild]
-run = NET_TWITTER_NO_TRENDS_WARNING=1 %x -I%d/lib src/build.pl %v 'src/net-twitter-pod.tt2' 'lib/Net/Twitter.pod'
-run = pod2text 'lib/Net/Twitter.pod' 'README'
-
 [Run::AfterBuild]
-run = rm README lib/Net/Twitter.pod
+run = NET_TWITTER_NO_TRENDS_WARNING=1 %x -I%d/lib src/build.pl %v 'src/net-twitter-pod.tt2' '%d/lib/Net/Twitter.pod'
+run = pod2text '%d/lib/Net/Twitter.pod' '%d/README'
 
 [MetaNoIndex]
 directory = src
