@@ -1,3 +1,5 @@
+    - add links to Twitter API docs
+
 4.01030 2016-11-18
     - cleaned up Net::Twitter::Error and documented stack_trace and stack_frame
       methods
